[✔] Fixed input styles on iOS.

--- a/public/stylesheets/bundle/contour/common/_normalize.css.sass
+++ b/public/stylesheets/bundle/contour/common/_normalize.css.sass
@@ -113,10 +113,12 @@
     input[type='text'],
     input[type='email'],
     textarea
+      border-radius: 0
       border: 2px solid #FFF
       padding: rem(5)
       width: 100%
 
+      @include appearance(none)
       @include box-sizing(border-box)
 
     input
